Finish mobile styles
Includes fixing minor html issues.

--- a/1.html
+++ b/1.html
@@ -28,16 +28,15 @@
     <!-- Body -->
     <main>
       <aside>
-        <h2>This is a sidebar.</h2>
+        <h2>This is a sidebar</h2>
         <div class="sample-img">Image</div>
         <p>When the screen size hits 576px or smaller...</p>
       </aside>
 
       <section>
-        <h2>This is the body.</h2>
+        <h2>This is the body</h2>
         <div class="sample-img">Image</div>
         <p>..all of the image placeholders will change colors!</p>
-        <br />
         <h2>But the real problem is...</h2>
         <div class="sample-img">Image</div>
         <p>
@@ -49,10 +48,10 @@
 
     <!-- Footer -->
     <footer>
-      <h3>
+      <p>
         Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
         window!
-      </h3>
+      </p>
     </footer>
   </body>
 </html>
