Added CSS and changed HTML

--- a/1.html
+++ b/1.html
@@ -14,14 +14,14 @@
     <!-- Header -->
     <header>
       <h1>This Header</h1>
-      <p>will change colors when the screen size hits 992px or smaller.</p>
+      <p>will change colors when the screen size hits 992px or larger.</p>
     </header>
 
     <!-- Navbar -->
     <nav>
       <p>
         This Navbar will change colors when the screen size hits 768px or
-        smaller.
+        larger.
       </p>
     </nav>
 
@@ -30,7 +30,10 @@
       <aside>
         <h2>This is a sidebar</h2>
         <div class="sample-img">Image</div>
-        <p>When the screen size hits 576px or smaller...</p>
+        <p>
+          When the screen size hits 576px or larger... this paragraph will be
+          white.
+        </p>
       </aside>
 
       <section>
