--- a/3.html
+++ b/3.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="us-en">
   <head>
-    </title>Flexbox</title>
+    <title>Flexbox</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css"/>
-    <link rel="stylesheet" type="text/css" href="./assets/css/3.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./assets/css/3.css" />
   </head>
 
   <body>
