--- a/5.html
+++ b/5.html
@@ -4,7 +4,11 @@
     <title>Responsive Web Design</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="assets/css/5.css" />
   </head>
   <body>
     <header>
@@ -23,7 +27,7 @@
       <aside>
         <h2>This is a sidebar.</h2>
         <div class="sample-img">Image</div>
-        <p>
+        <p class="header">
           It will stack BELOW the body once the screen hits 768px or smaller.
         </p>
       </aside>
