--- a/5.html
+++ b/5.html
@@ -17,10 +17,18 @@
     </header>
 
     <nav>
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-      <a href="#">Link 4</a>
+      <section class="card">
+        <a href="#">Link 1</a>
+      </section>
+      <section class="card">
+        <a href="#">Link 2</a>
+      </section>
+      <section class="card">
+        <a href="#">Link 3</a>
+      </section>
+      <section class="card">
+        <a href="#">Link 4</a>
+      </section>
     </nav>
 
     <main>
