--- a/9.html
+++ b/9.html
@@ -4,6 +4,11 @@
     <title>CSS Box Styling</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" type="text/css" href="./assets/css/9.css" />
   </head>
   <body>
@@ -12,48 +17,39 @@
       <p>Here are different ways we can transform boxes!</p>
     </header>
 
-    <nav><br /></nav>
-
     <main>
-      <section>
-        <div class="photo rotate">
+        <figure class="photo rotate">
           <h2>Rotate</h2>
           <img
             src="assets/images/teddy-bear.jpg"
             alt="teddy bear rotated to the right"
+            width="320"
+            height="214"
           />
-          <p>We can rotate to the right or to the left!</p>
-        </div>
-      </section>
+          <figcaption>We can rotate to the right or to the left!</p>
+        </figure>
 
-      <section>
-        <div class="photo scale">
+        <figure class="photo scale">
           <h2>Scale</h2>
           <img
             src="assets/images/canned-coffee.jpg"
             alt="canned coffee stretched horizontally"
+            width="320"
+            height="214"
           />
-          <p>We can stretch it vertically or horizontally!</p>
-        </div>
-      </section>
+          <figcaption>We can stretch it vertically or horizontally!</p>
+        </figure>
 
-      <section>
-        <div class="photo skew">
+        <figure class="photo skew">
           <h2>Skew</h2>
           <img
             src="assets/images/cookie-tin.jpg"
             alt="cookie tin skewed to the left"
+            width="320"
+            height="214"
           />
-          <p>We can skew to the right or to the left!</p>
-        </div>
-      </section>
+          <figcaption>We can skew to the right or to the left!</p>
+        </figure>
     </main>
-
-    <footer>
-      <h3>
-        Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
-        window!
-      </h3>
-    </footer>
   </body>
 </html>
